--- a/src/vellum.csproj
+++ b/src/vellum.csproj
@@ -19,6 +19,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
     <PackageReference Include="Mono.Options" Version="6.6.0.161">
       <PrivateAssets Condition="'$(OutputType)' == 'Library'">all</PrivateAssets>
     </PackageReference>
